using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace SVGObjectsDecomposer.OutputWriters
{
    interface IOutputWriter
    {
        void Execute();
    }
}
